# django-icons

./: .gitignore  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  dependabot-auto-approve-and-merge.yml  test.yml
django_icons/: __init__.py  css.py  renderers.py  utils.py
django_icons/renderers/: __init__.py  base.py  bootstrap3.py  fontawesome.py  image.py  material.py
django_icons/templatetags/: icons.py
docs/: api.rst  conf.py  demo.rst  example.rst  index.rst  installation.rst  quickstart.rst  renderers.rst  requirements.txt  settings.rst  templatetags.rst
example/: README.md  README.rst  requirements.txt  settings.py  urls.py
example/app/: renderers.py  views.py
example/templates/: base.html  home.html
src/django_icons/: __about__.py  __init__.py  core.py  css.py  utils.py
src/django_icons/renderers/: __init__.py  base.py  bootstrap3.py  fontawesome.py  fontawesome4.py  icon.py  image.py  material.py
src/django_icons/templatetags/: icons.py
tests/: smoke_test.py  test_base.py  test_bootstrap3.py  test_core.py  test_core_renderer.py  test_css.py  test_font_awesome.py  test_fontawesome.py  test_fontawesome4.py  test_fontawesome4_renderer.py  test_icon.py  test_icon_renderer.py  test_icons8pngcdn.py  test_image.py  test_image_renderer.py  test_material.py  test_material_renderer.py  test_template_tags.py  test_utils.py  test_version.py
tests/app/: renderers.py  settings.py  urls.py  views.py  wsgi.py
tests/app/templates/: base.html  home.html
